--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+:root{
+    --yellow: #ffb92a;
+    --white: #fff;
+    --gray: #a0a0a0;
+    --black: #000;
+}
+
 * {
     padding: 0;
     margin: 0;
