--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,116 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+body{
+    height: 100vh;
+    background: linear-gradient(var(--black) 50%, var(--yellow) 50%);
+}
+
+.container{
+    font-size: 16px;
+    width: 90vw;
+    padding: 2em 1.8em;
+    max-width: 37.5em;
+    background: #201f28;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: .6em;
+    box-shadow: 1.2em 2em 3em rgba(0, 0, 0, .2);
+}
+.search-container{
+    display: grid;
+    grid-template-columns: 9fr 3fr;
+    gap: 1.2em;
+}
+.search-container input,
+.search-container button{
+    font-size: .9em;
+    outline: none;
+    border-radius: .3em;
+}
+.search-container input{
+    background-color: transparent;
+    border: 1px solid var(--gray);
+    padding: .7em;
+    color: var(--white);
+}
+.search-container input:focus{
+    border-color: var(--white);
+}
+.search-container button{
+    background-color: var(--yellow);
+    border: none;
+    cursor: pointer;
+}
+#result{
+    color: var(--white);
+}
+.info{
+    position: relative;
+    display: grid;
+    grid-template-columns: 4fr 8fr;
+    align-items: center;
+    margin-top: 1.2em;
+}
+.poster{
+    width: 100%;
+}
+h2{
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 600;
+    letter-spacing: .06em;
+}
+.rating{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .6em;
+    margin: .6em 0 .9em 0;
+}
+.rating img{
+    width: 1.2em;
+}
+.rating h4{
+    display: inline-block;
+    font-size: 1.1em;
+    font-weight: 500;
+}
+.details{
+    display: flex;
+    font-size: .95em;
+    gap: 1em;
+    justify-content: center;
+    color: var(--gray);
+    margin: .6em 0;
+    font-weight: 300;
+}
+.genre{
+    display: flex;
+    justify-content: space-around;
+}
+.genre div{
+    border: 1px solid var(--gray);
+    font-size: .75em;
+    padding: .4em 1.6em;
+    border-radius: .4em;
+    font-weight: 300;
+}
+h3{
+    font-weight: 500;
+    margin-top: 1.2em;
+}
+p{
+    font-size: .9em;
+    font-weight: 300;
+    line-height: 1.8em;
+    text-align: justify;
+    color: var(--gray);
+}
+.msg{
+    text-align: center;
+}
+
