--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,3 +124,16 @@ p{
     text-align: center;
 }
 
+@media screen and (max-width: 600px){
+    .container{
+        font-size: 14px;
+    }
+    .info{
+        grid-template-columns: 1fr;
+    }
+    .poster{
+        margin: auto;
+        width: auto;
+        max-height: 10.8rem;
+    }
+}
